South-American Content

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -2497,7 +2497,6 @@ test_show_shall_coco_SSP:0 "[?SSP|Y] seats for Shall's party"
  ww1_brazil.34.a: "A victory for South America!"
  ww1_brazil.34.b: "They are fools!"
  
- 
  ww1_brazil.100.d: "A guerrilla war for land between settlers and landowners has started in Brazil. The war has its casus belli in the social conflicts in the region, the result of local disobediences, particularly regarding the regularization of land ownership on the part of the caboclos. The conflict is permeated by religious fanaticism expressed by the messianism and faith of the rebellious caboclos that they are engaged in a religious war; at the same time, it reflects the dissatisfaction of the population with its material situation."
  ww1_brazil.100.a: "They couldn't defeat a group of peasants?"
  ww1_brazil.100.b: "These religious fanatics will be crashed." 
@@ -2516,6 +2515,12 @@ test_show_shall_coco_SSP:0 "[?SSP|Y] seats for Shall's party"
  ww1_brazil.103.a: "South America stands its ground!"
  ww1_brazil.103.b: "An attempt to stay relevant?"
  
+ # Venezuela
+ ww1_venezuela.1.t: "Armed Uprising against [VEN.GetLeader]"
+ ww1_venezuela.1.d: "Yesterday, [VEN.GetLeader] sent a communiqué to the presidents of the [VEN.GetAdjective] states, warning them that an armed uprising against him was about to begin, alleging that it would be accompanied by an invasion by former president Cipriano Castro through Coro, Falcón state.\n\n[VEN.GetLeader] then suspended constitutional guarantees today, in order to confront the armed movement that allegedly sought to overthrow him. Tommorow he will travel to Maracay to begin his campaign against the insurgents from the city, leaving José Gil Fortoul as president-in-charge."
+ ww1_venezuela.1.a: "And so dies democracy in Venezuela."
+
+ # Chile
  ww1_chile.1.t: "President Pedro Montt Dies!"
  ww1_chile.1.d: "The president was sick of arteriosclerosis and arrhythmia, and each day it got worse.\n\nOn 16 of July, he embarked for Germany, with his wife and his doctor, hoping that the German doctors could treat him.\nThe trip was very tiring and the last strength that he had was lost.\n\nHe came to Bremen on the 16 of August and was stationed in a hotel with his small entourage. Near midnight of that day, he went to the bathroom. His private secretary noticed that he did not come back after a long time, went to look for him. When he got to the bathroom, he found him dead.\nThe probable cause of death was a heart attack or a stroke."
  ww1_chile.1.a: "He shouldn't have ignored the advice of Father Tadeo."
