--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2699,38 +2699,26 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  #Japan
  JAP_uncontrollable_military:0 "Uncontrollable Military"
  JAP_uncontrollable_military_desc:0 "The Japanese Military is willing to cause conflicts and war to gain their own colonies and show off their might. The government is unnable to manage and restrain their military well, and even the military cannot control themselves."
+ 
+ # Venezuela
+ VEN_hacienda:0 "Haciendas"
+ VEN_hacienda_desc:0 "The sprawling estates of powerful landowners dominate the rural landscape, reinforcing a deeply entrenched system of economic inequality and agricultural dependence. The elite few control vast amounts of land and labor, while the rural peasantry remains impoverished and politically marginalized. This concentration of wealth hinders industrialization and fuels social unrest, but also ensures the landowners' political influence remains strong in the national government."
+
+ VEN_foreign_debt:0 "Foreign Debt"
+ VEN_foreign_debt_desc:0 "Under the reckless administration of Cipriano Castro, Venezuela’s national finances were mismanaged, leading to skyrocketing foreign debt and international tensions. Castro's failure to address the growing financial crisis left the country vulnerable to foreign intervention and diplomatic isolation. When Juan Vicente Gómez took power, he inherited this burden and was forced to take drastic measures to stabilize the economy. Gómez worked to negotiate with creditors and impose fiscal discipline, but the heavy debt still looms large over the nation's future, constraining domestic development and fueling resentment among the populace."
 
  #Chile
  CHL_prussian_army:0 "Prussian Tradition"
- CHL_prussian_army_desc:0 "Prussian Tradition"
+ CHL_prussian_army_desc:0 "In an effort to modernize its military and administration, Chile has welcomed a group of experienced German advisors. These military experts and bureaucrats bring with them a wealth of knowledge on organization, tactics, and governance. Their influence is evident in the restructuring of the Chilean army and the adoption of more efficient administrative practices. While their expertise strengthens Chile's military capabilities, their presence also stirs debates about foreign influence and national sovereignty."
 
- CHL_la_cuestion_social:0 "La Cuestion Social"
- CHL_la_cuestion_social_desc:0 ""
+ CHL_Southamerican_dreadnought_race:0 "South-American Dreadnought Race"
+ CHL_Southamerican_dreadnought_race_desc:0 "As tensions rise among the major South American powers, the race to build dreadnoughts—the powerful battleships that symbolize naval supremacy—intensifies. Argentina, Brazil, and Chile are locked in a fierce competition to modernize their fleets, each striving to outdo the others and secure maritime dominance in the region."
 
- CHL_republica_en_forma:0"Republica En Forma"
- CHL_republica_en_forma_desc:0 ""
+ CHL_remnants_of_the_valpo_earthquake:0 "Remnants Of The Valparaíso Earthquake"
+ CHL_remnants_of_the_valpo_earthquake_desc:0 "The devastating earthquake of 1906 left lasting scars on Valparaíso and the surrounding regions. Despite reconstruction efforts, many citizens struggle to rebuild their lives in the aftermath of the catastrophe."
 
- CHL_century_crisis:0 "Crisis Del Centenario"
- CHL_century_crisis_desc:0 ""
-
- CHL_Southamerican_dreadnought_race:0 "South American Dreadnought Race"
- CHL_Southamerican_dreadnought_race_desc:0 ""
-
- CHL_remnants_of_the_valpo_earthquake:0 "Remnants Of The Valparaiso Earthquake"
- CHL_remnants_of_the_valpo_earthquake_desc:0 ""
-
- CHL_la_fronda_aristocratica:0 "La Fronda Aristocratica"
- CHL_la_fronda_aristocratica_desc:0 "If We Do Something Stupid, The Aristocracy Will Reveal Against Us"
-
- CHL_la_fronda_aristocratica2:0 "La Fronda Aristocratica"
- CHL_la_fronda_aristocratica2_desc:0 "WE'VE DONE SOMETHING VERY STUPID"
-
- CHL_la_hacienda:0 "La Hacienda"
- CHL_la_hacienda_desc:0 ""
-
- CHL_flagrant_consumism:0 "Flagrant Consumism"
- CHL_flagrant_consumism_desc:0 ""
-
+ CHL_la_hacienda:0 "Haciendas"
+ CHL_la_hacienda_desc:0 "The sprawling estates of powerful landowners dominate the rural landscape, reinforcing a deeply entrenched system of economic inequality and agricultural dependence. The elite few control vast amounts of land and labor, while the rural peasantry remains impoverished and politically marginalized. This concentration of wealth hinders industrialization and fuels social unrest, but also ensures the landowners' political influence remains strong in the national government."
 
  CHL_FAMAE:0 "FAMAE"
  CHL_FAMAE_desc:0 "FAMAE (Fábricas y Maestranzas del Ejército, "Factories and Workshops of the Army") is a Chilean state-owned firearms manufacturer. Its products are used by the Chilean army."
@@ -2817,7 +2805,7 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  
  #PERU
  PRU_aristocratic_republic:0 "Aristocratic Republic"
- PRU_aristocratic_republic_desc:0 "Most of the presidents that ruled the country were from the social elite."
+ PRU_aristocratic_republic_desc:0 "Peru is governed by an elite class of landowners and wealthy oligarchs, a system often referred to as the ''Aristocratic Republic''. Political power is concentrated in the hands of the few, while the majority of the population remains marginalized and excluded from decision-making."
 
  #United Baltic Duchy
  UBD_byzantine_government:0 "Byzantine Political System"
