--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -402,6 +402,8 @@
  no_resistance:0 "No Resistance"
  hate_opium:0 "Hates Opium"
  christian_general:0 "Christian General"
+ 
+ VEN_el_pacificador:0 "El Pacificador"
 
  CHI_trait_dictator:0 "Dictator"
  CHI_trait_imperial_prime_minister:0 "Imperial Prime Minister"
