--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -621,7 +621,8 @@
  TIB_ADJ:0 "Tibetan"
  VEN_democratic:0 "Venezuela"
  VEN_democratic_DEF:0 "the United States of Venezuela"
- VEN_neutrality_DEF:0 "the Bolivarian Republic of Venezuela"
+ VEN_neutrality_DEF:0 "the United States of Venezuela"
+ VEN_fascism_DEF:0 "The United States of Venezuela"
  VEN_communism:0 "Republic of Venezuela"
  VEN_communism_DEF:0 "the Republic of Venezuela"
  VEN:0 "Venezuela"
