--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2851,6 +2851,7 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  ROM_the_natural_enemy_idea:0 "The Natural Enemy"
  ROM_social_welfare_idea:0 "State-Funded Social Welfare"
  ROM_build_up_more_defenses_idea:0 "Focus on Fortifications"
+ ROM_independance_on_resources:0 "Independance on Resources"
 
  #PERU
  PRU_aristocratic_republic:0 "Aristocratic Republic"
