South-America 2 : Electric Boogaloo

--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2706,6 +2706,20 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
 
  VEN_foreign_debt:0 "Foreign Debt"
  VEN_foreign_debt_desc:0 "Under the reckless administration of Cipriano Castro, Venezuela’s national finances were mismanaged, leading to skyrocketing foreign debt and international tensions. Castro's failure to address the growing financial crisis left the country vulnerable to foreign intervention and diplomatic isolation. When Juan Vicente Gómez took power, he inherited this burden and was forced to take drastic measures to stabilize the economy. Gómez worked to negotiate with creditors and impose fiscal discipline, but the heavy debt still looms large over the nation's future, constraining domestic development and fueling resentment among the populace."
+ 
+ VEN_federalismo:0 "Federalismo"
+ VEN_federalismo_desc:0 "Venezuela’s deeply rooted tradition of federalism dates back to its 19th-century struggles, where regional caudillos (strongmen) played significant roles in the country's politics. This federal structure, which emphasizes regional autonomy, has long been a cornerstone of Venezuelan governance."
+ 
+ # Colombia
+ COL_la_catastrofe_de_panama:0 "La Catástrofe de Panamá"
+ COL_la_catastrofe_de_panama_desc:0 "The secession of Panama in 1903, supported by U.S. intervention, remains a profound national humiliation for Colombia. Known as "La Catástrofe de Panamá," this event shattered the country's territorial integrity and deeply wounded its national pride. The loss of Panama and the subsequent construction of the Panama Canal under foreign control has left Colombians grappling with a sense of betrayal and defeat."
+
+ # Ecuador
+ ECU_caudillismo:0 "Caudillismo"
+ ECU_caudillismo_desc:0 "Ecuador is trapped in a cycle of Caudillismo, where regional strongmen vie for power, leading to frequent leadership changes and political instability. Bitter conflicts between liberals and conservatives over church-state relations further divide the nation. These power struggles weaken the central government and hinder effective governance, leaving the country fragmented and vulnerable to internal unrest."
+
+ ECU_regionalismo:0 "Regionalismo"
+ ECU_regionalismo_desc:0 "Ecuador is characterized by deep Regionalismo, where local identities and interests overshadow national unity. The country’s diverse geography fosters strong regional loyalties, resulting in political fragmentation and a lack of effective central governance. Coastal and highland regions often clash over resources and representation, complicating efforts for cohesive national policies and stability."
 
  #Chile
  CHL_prussian_army:0 "Prussian Tradition"
