--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -3246,6 +3246,10 @@
  AFA_neutrality:0 "Aussa"
  AFA_neutrality_DEF:1 "the Sultanate of Aussa"
  
+ SMC:0 "Mantetsu"
+ SMC_DEF:0 "the South Manchuria Railway"
+ SMC_ADJ:0 "Manchurian"
+ 
  ### Debug Tag ###
  XXA:0 "Debug Tag"
  XXA_ADJ:0 "Debug"
