--- a/localisation/english/ww1_research_l_english.yml
+++ b/localisation/english/ww1_research_l_english.yml
@@ -171,9 +171,9 @@
  ww1_strategic_bombing:0 "Strategic Bombing"
  ww1_strategic_bombing_desc:0 "As bombing is becoming more common, bombing plans evolve with each bombing, yielding greater devastation across military threats on the surface."
  ww1_tactical_bombing:0 "Tactical Bombing"
- ww1_tactical_bombing_desc:0 "Military Tacticans evolve their tactics based on how they bomb to disable military advantages of enemy forces"
+ ww1_tactical_bombing_desc:0 "Military Tacticans evolve their tactics based on how they bomb to disable military advantages of enemy forces."
  ww1_aerial_demoralization:0 "Aerial Demoralization"
- ww1_aerial_demoralization_desc:0 "Following intense bombing raids and overwhelming suppression enemy forces gradually become demoralized, enabling a wider path to victory"
+ ww1_aerial_demoralization_desc:0 "Following intense bombing raids and overwhelming suppression enemy forces gradually become demoralized, enabling a wider path to victory."
  ww1_flying_aces:0 "Flying Aces"
  ww1_flying_aces_desc:0 "With all areas of conflict come the best of the best; there is no difference in air combat. Extremely Skilled Pilots build points of success leading to greater drive for combat across the entire military."
  ww1_improved_training:0 "Improved Training"
