--- a/localisation/russian/countries_l_russian.yml
+++ b/localisation/russian/countries_l_russian.yml
@@ -619,9 +619,10 @@
  TIB:0 "Тибет"
  TIB_DEF:0 "Тибет"
  TIB_ADJ:0 "Тибетск"
- VEN_democratic:0 "Соединенные Штаты Венесуэлы"
+ VEN_democratic:0 "Венесуэла"
  VEN_democratic_DEF:0 "Соединенные Штаты Венесуэлы"
  VEN_neutrality_DEF:0 "Соединенные Штаты Венесуэлы"
+ VEN_fascism_DEF:0 "Соединенные Штаты Венесуэлы"
  VEN_communism:0 "Республика Венесуэла"
  VEN_communism_DEF:0 "Республика Венесуэла"
  VEN:0 "Венесуэла"
