--- a/localisation/russian/ww1_research_l_russian.yml
+++ b/localisation/russian/ww1_research_l_russian.yml
@@ -161,31 +161,31 @@
  TITLE_WW1_AIRDOCTRINE:0 "Доктрина эпохи Великой войны"
  WW1_AIRDOCTRINE_DESC:0 "Появление летательных аппаратов тяжелее воздуха стало предвестником изменения характера военных действий."
  ww1_airdoctrine:0 "Аэростаты наблюдения"
- ww1_airdoctrine_desc:0 ""
- ww1_aerial_messengers:0 "Aerial Messengers"
- ww1_aerial_messengers_desc:0 ""
+ ww1_airdoctrine_desc:0 "Аэростаты наблюдения дают преимущество военной разведке. Эти привязные аэростаты используют бинокли и раннее фотографическое оборудование, что позволяет им разведывать позиции противника и точно направлять огонь артиллерии."
+ ww1_aerial_messengers:0 "Сообщения с воздуха"
+ ww1_aerial_messengers_desc:0 "Сообщения с воздуха значительно повлияли на координацию и модернизировали ее, позволяя более эффективно командовать и управлять военными операциями. Эта инновация повышает наши боевые возможности."
  ww1_airdropped_bombs:0 "Сброс бомб с воздуха"
- ww1_airdropped_bombs_desc:0 ""
+ ww1_airdropped_bombs_desc:0 "Используется как средство нейтрализации целей; сброшенные с воздуха бомбы наносят критический урон моральному духу противника, а также его способности эффективно сражаться."
  ww1_naval_aviation:0 "Морская авиация"
- ww1_naval_aviation_desc:0 ""
+ ww1_naval_aviation_desc:0 "С ростом военно-морских разработок по всему миру самолеты модернизируются и перепрофилируются для борьбы с угрозами на всех типах водных объектов."
  ww1_strategic_bombing:0 "Стратегическая бомбардировка"
- ww1_strategic_bombing_desc:0 ""
+ ww1_strategic_bombing_desc:0 "Поскольку бомбардировки становятся все более распространенными, планы их проведения меняются с каждым налетом, принося все больше разрушений военным угрозам на поверхности."
  ww1_tactical_bombing:0 "Тактическая бомбардировка"
- ww1_tactical_bombing_desc:0 ""
+ ww1_tactical_bombing_desc:0 "Военные тактики развивают свою стратегию, основываясь на том, как они бомбят, чтобы уничтожить военное преимущество вражеских сил."
  ww1_aerial_demoralization:0 "Деморализация с воздуха"
- ww1_aerial_demoralization_desc:0 ""
+ ww1_aerial_demoralization_desc:0 "После интенсивных бомбовых налетов и подавления вражеских сил они постепенно деморализуются, что позволяет проложить путь к победе."
  ww1_flying_aces:0 "Летчики-асы"
- ww1_flying_aces_desc:0 ""
+ ww1_flying_aces_desc:0 "На всех фронтах конфликтов появляются лучшие из лучших, и воздушный - не исключение. Чрезвычайно опытные пилоты добиваются больших результатов, что приводит к повышению боевого духа у всех военных."
  ww1_improved_training:0 "Улучшенная подготовка"
- ww1_improved_training_desc:0 ""
+ ww1_improved_training_desc:0 "ВВС развивают свою способность к милитаризации населения для борьбы с более опасными угрозами времени."
  ww1_night_operations:0 "Ночные операции"
- ww1_night_operations_desc:0 ""
- ww1_army_air_corps:0 "Army Air Corps"
- ww1_army_air_corps_desc:0 ""
+ ww1_night_operations_desc:0 "Рискованность ночных полетов связана с возможностью использовать в своих интересах плохо подготовленные силы противника в ночное время."
+ ww1_army_air_corps:0 "Армейский воздушный корпус"
+ ww1_army_air_corps_desc:0 "Сухопутные войска еще больше укрепляют сотрудничество и связь с ВВС, делая армию в целом более взаимосвязанной в бою."
  ww1_independent_air_force:0 "Независимые воздушные силы"
- ww1_independent_air_force_desc:0 ""
- ww1_twilight_of_the_airship:0 "Twilight of the Airship"
- ww1_twilight_of_the_airship_desc:0 ""
+ ww1_independent_air_force_desc:0 "Чтобы эффективно направлять наши действия, необходимо перестать полагаться на ВВС."
+ ww1_twilight_of_the_airship:0 "Закат дирижаблей"
+ ww1_twilight_of_the_airship_desc:0 "Высота боевых дирижаблей вот-вот будет достигнута, пора использовать ее по максимуму."
  
  
  motorised_infantry2:0 "Моторизованная пехота"
@@ -202,3 +202,4 @@
  brazilian_french_research_desc:0 ""
  ITA_modernized_cavalry_tech:0 "Модернизированная кавалерия"
  ITA_savari_tech:0 "Савари"
+ 
