--- a/localisation/russian/ww1_traits_l_russian.yml
+++ b/localisation/russian/ww1_traits_l_russian.yml
@@ -403,6 +403,8 @@
  hate_opium:0 "Ненавидит опиум"
  christian_general:0 "Генерал-христианин"
  
+ VEN_el_pacificador:0 "El Pacificador"
+ 
  CHI_trait_dictator:0 "Диктатор"
  CHI_trait_imperial_prime_minister:0 "Имперский премьер-министр"
  CHI_trait_ambitious_commander:0 "Амбициозный командир"
