--- a/localisation/russian/parties_l_russian.yml
+++ b/localisation/russian/parties_l_russian.yml
@@ -1161,11 +1161,9 @@
  URG_communism_party:0 "СПУ"
  URG_communism_party_long:0 "Социалистическая Партия Уругвая"
  
- VEN_neutrality_party:0 "Висентистас"
- VEN_fascism_party:0 "Висентистас"
- VEN_democratic_party:0 "Демократические Действия"
- VEN_communism_party:0 "ВРП"
- VEN_communism_party_long:0 "Венесуэльская Революционная Партия"
+ VEN_neutrality_party:0 "Военное Правительство"
+ VEN_fascism_party:0 "Военное Правительство"
+ VEN_democratic_party:0 "Либеральная Партия"
  
  PRU_fascism_party:0 "Военная Хунта"
  PRU_communism_party:0 "СПП"
