--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1956,3 +1956,7 @@
 
  MLW_neutrality_party:0 "Chilembwe Movement"
 
+ SMC_democratic_party:0 "Mantetsu"
+ SMC_democratic_party_long:0 "Minamimanshū Tetsudō Kabushikigaisha"
+ SMC_neutrality_party:0 "Kantō-gun"
+ SMC_neutrality_party_long:0 "Kantō-gun"
