--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1976,6 +1976,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  JAP_inukai_tsuyoshi:0 "Inukai Tsuyoshi"
  JAP_okada_keisuke:0 "Okada Keisuke"
  JAP_kwantung_army_hq:0 "Kwantung Army H.Q."
+ JAP_nakamura_yoshikoto:0 "Nakamura Yoshikoto"
 
  # JABAL SHAMMAR
  JBS_saud_bin_abdulaziz_al_rashid:0 "Saud bin Abdulaziz Al Rashid"
