--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2594,6 +2594,8 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  KOR_idea_army_tradition:0 "Tradition of Righteous Army"
  KOR_idea_army_tradition_desc:0 "Million soldiers of New Korea,\nYour Fatherland calls for you!\nOur thirty million compatriots of three thousand miles\nIt's you and me who will save!"
  KOR_modern_agriculture:0 "Modern Agriculture"
+ KOR_idea_resident_general:0 "Resident-Generalship"
+ KOR_idea_resident_general_desc:0 "Korea became a Japanese protectorate under an unequal treaty after the Russo-Japanese War. There is royal court and cabinet, with the emperor, but a Japanese-sent Korean resident-general interferes with all decisions."
 
  #Denmark
  DEN_canadian_trade:0 "Canadian Trade Routes"
@@ -2727,6 +2729,8 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  JAP_idea_ansei_treaties:0 "Ansei Treaties"
  JAP_idea_ansei_treaties:0 "The last shogunate had been cheated by the western powers, blinded bureaucracy had agreed to sign the unfair treaties with those swindlers, even with no recognisation from the Emperor." #Since we have no strength to demand them pullout and cancel the agreements, negotiation foward can be a way to solve them out.
  JAP_idea_buying_ships:0 "Warship Payment"
+ JAP_south_manchuria_railway:0 "Japanese Economic Dominance"
+ JAP_south_manchuria_railway_desc:0 "The South Manchuria Railway Company, or Mantetsu for short, is a railway company of [JAP.GetNameDef] that operates the railways of South Manchuria. The Japanese government owns more than half of the shares, making it a de facto state-owned company. Mantetsu Railway Zone's economy is dominated by the Japanese, and the company also runs mining, ports, oil refining, distribution, manufacturing, publishing, education, and healthcare. It's not just a railway company, but a driving force that dominates Manchuria alongside the Kwantung Army."
  
  # Venezuela
  VEN_hacienda:0 "Haciendas"
