--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5371,7 +5371,7 @@ ROM_from_the_top_down_desc:0 "The peasant class will do best when the economy do
 ROM_land_reform_pass:0 "§YLand Reform Bill§! has §GPassed§!"
 ROM_land_reform_fail:0 "§YLand Reform Bill§! has §RFailed§!"
 land_reform_fail:0 "The land reform bill will §Rnot§! pass"
-ROM_bratianu_resign:0 "Bratianus' Resignation"
+ROM_bratianu_resign:0 "Brătianu's Resignation"
 ROM_bratianu_resign_desc:0 "The failure of the PNL to pass the most recent land reform bill has proven to the king that the liberals have governed for long enough, and that its time for another party to bring a fresh face to governance. Lets have Bratianu resign, and have the conservative PC form a government."
 on_select_ROM_our_duty_to_the_people:0 "On selection of this focus:\nGets event '§YThe Brătianu Land Reform Bill - Debate Begins§!'\nWe will have to deal with a variety of groups attempting to §Cinfluence§! the bill. If the bill passes, we will gain:\nModify §YUnfinished Land Reform§! by\nConsumer Goods Factories factor: §Y-5.0%§!\nMax Factories in a State: §G+5%§!\nPolitical Power Gain: §G+0.10§!"
 ROM_king_carols_reign:0 "King Carol's Reign"
