--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -742,7 +742,7 @@
  STATE_741: "Sud-Est du Cambodge"
  STATE_742: "Karategin"
  STATE_743: "Mellilla and Ceuta"
- STATE_744: "Dalian"
+ STATE_744: "Kwantung"
  STATE_745: "Kiautschou"
  STATE_746: "Weihaiwei" #威海衛
  STATE_747: "Asir"
@@ -1187,7 +1187,6 @@
  PONDICHERRY_STATE: "Pondicherry"
  KWANTUNG_STATE: "Kwantung" #關東
  KVANTUNSKAYA_STATE: "Kvantunskaya"
- DAIREN_STATE: "Dairen"
  PARNU_STATE: "Pärnu"
  PERNAU_STATE: "Pernau"
  RAKVERE_STATE: "Rakvere"
