--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -320,7 +320,7 @@
  VICTORY_POINTS_3962: "Hakodate"
  VICTORY_POINTS_12446: "Toyohara"
  VICTORY_POINTS_11932: "Naha"
- VICTORY_POINTS_1150: "Dalian"
+ VICTORY_POINTS_1150: "Dairen"
  VICTORY_POINTS_4572: "Changchun"
  VICTORY_POINTS_4052: "Pyeongyang"
  VICTORY_POINTS_4056: "Busan"
@@ -1567,7 +1567,7 @@
  VICTORY_POINTS_7602: "Asterabad"
  VICTORY_POINTS_2900: "Sedan"
  VICTORY_POINTS_10542: "Kurgan"
- VICTORY_POINTS_6981: "Andong"
+ VICTORY_POINTS_11764: "Yingkou"
  VICTORY_POINTS_9781: "Anshan"
  VICTORY_POINTS_7663: "Jilin"
  VICTORY_POINTS_207: "Velikiye Luki"
@@ -1995,6 +1995,7 @@
  LIMASOL_PROV: "Limasol"
  DEYRIZOR_PROV: "Deyrizor"
  KERKUK_PROV: "Kerkük"
+ DALIAN_PROV: "Dalian"
  DALNIY_PROV: "Dalniy"
  QINGDAO_PROV: "Tsingtao"
  MAARIANHAMINA_PROV: "Maarianhamina"
