war of triple alliance idea desc

--- a/localisation/english/replace/replace_ideas_l_english.yml
+++ b/localisation/english/replace/replace_ideas_l_english.yml
@@ -7,4 +7,4 @@
  POR_estado_novo_desc:1 "We should follow the principles of Corporatism and Autarky. The surest path to greater national strengthening is to further emphasize this approach, building a new, more powerful state."
  jiangnan_shipyard_group:0 "Jiangnan Dock and Engineering Works"
  idea_PAR_the_aftershock_of_the_tripple_alliance_instant_desc:0 ""
- 
+ idea_PAR_the_aftershock_of_the_tripple_alliance_desc:0 "The War of the Triple Alliance against Brazil, Argentina and Uruguay was an extremely bloody war for our nation with much of our population dying to disease and fighting for our army. This has left significant scars on our nation, which are still around to this day."
