--- a/localisation/english/ww1_research_l_english.yml
+++ b/localisation/english/ww1_research_l_english.yml
@@ -12,9 +12,13 @@
  machine_tools5:0 "Machine Tools V"
  machine_tools5_desc:0 "With new advanced machinery, we can increase our military production more then ever before."
  industrial_complex1:0 "Industrial Complex Construction I"
+ industrial_complex1_desc:0 "" 
  industrial_complex2:0 "Industrial Complex Construction II"
+ industrial_complex2_desc:0 ""
  industrial_complex3:0 "Industrial Complex Construction III"
+ industrial_complex3_desc:0 ""
  industrial_complex4:0 "Industrial Complex Construction IV"
+ industrial_complex4_desc:0 ""
  fortification_tech:0 "Fortification Technologies"
  fortification1:0 "Fortification I"
  fortification1_desc:0 "By building basic defensive positions, we can easily increase our defensive capabilities."
@@ -23,15 +27,16 @@
  fortification3:0 "Fortification III"
  fortification3_desc:0 "With metal structures placed in front of our defensive positions, the enemy will have trouble advancing to our fortified positions we can easily defend."
  anti_air_building1:0 "Anti-Air Defense I"
+ anti_air_building1_desc:0 "" 
  anti_air_building2:0 "Anti-Air Defense II"
+ anti_air_building2_desc:0 ""
  oil_production1:0 "Oil Production I"
  oil_production1_desc:0 "With advancements in oil drilling techniques, we can drill more oil then we could before."
  oil_production2:0 "Oil Production II"
  oil_production2_desc:0 "Progress in geology helps us determine where the largest oil reserves are and we can focus our efforts in places where larger oil deposits will be located."
  oil_production3:0 "Oil Production III"
  oil_production3_desc:0 "Advancements in key processes in how we drill oil will make all our drilling sites much more efficient."
- 
-
+ #GRENADES
  early_grenades:0 "Early Grenades"
  early_grenades_desc:0 "Around the turn of the 20th century, the ineffectiveness of the available types of hand grenades, coupled with their levels of danger to the user and difficulty of operation, meant that they were regarded as increasingly obsolete pieces of military equipment."
  basic_grenades:0 "Hand Grenades"
@@ -40,7 +45,7 @@
  improved_grenades_desc:0 "The first "safe grenade". Explosive-filled steel canisters with a triggering pin and a distinctive deeply notched surface. The segmentation is often erroneously thought to aid fragmentation,"
  advanced_grenades:0 "Gas Grenades"
  advanced_grenades_desc:0 "26 mm grenades filled with ethyl bromoacetate or chloroacetone."
-
+ #ARTILLERY+
  recon_armored_car:0 "Recon Armored Car"
  howitzer:0 "Support Howitzer"
  howitzer2:0 "Howitzer Upgrade I"
@@ -67,7 +72,7 @@
  coil_ignition_desc:0 "A trembler coil, buzz coil or vibrator coil is a type of high-voltage ignition coil used in the ignition system of early automobiles, most notably the Benz Patent-Motorwagen and the Ford Model T, produced from 1909"
  distributor_based_ignition:0 "Distributor-based Ignition"
  distributor_based_ignition_desc:0 "An improved ignition system was invented by Charles Kettering at Delco in the United States and introduced in Cadillac's cars. The Kettering ignition system consisted of a single ignition coil, breaker points, a capacitor (to prevent the points from arcing at break) and a distributor, to direct the electricity from the ignition coil to the correct cylinder."
-
+ #ELECTRICAL+
  chemical_research:0 "Chemical Research"
  chemical_research_desc:0 "There are countless elements in our world, unlike what ancient people used to think of as only water, fire, air, and soil are everything in the world. And if we learn how to handle these things, we can create a huge number of compounds. And there are endless possibilities here."
  aircraft_engine:0 "Aircraft Engine"
@@ -120,7 +125,7 @@
  decryption_machine_desc:0 "Decryption Machine"
  early_fire_control_system:0 "Early Fire Control System"
  early_fire_control_system_desc:0 "Early fire control systems were created on the basis of original mechanical computing devices. In a way, they were giant calculators for calculating range or direction."
- # LAND DOCTRINES
+ #LAND DOCTRINES
  TITLE_WW1_LANDDOCTRINE:0 "Great War Era Doctrine"
  WW1_LANDDOCTRINE_DESC:0 "The Franco-Prussian War has defined the totality of modern warfare, while the Russo-Japanese War has shown the importance of fortification.\nA big war will put many tactics to the test..."
  BITE_AND_HOLD_LABEL:0 "BITE AND HOLD"
@@ -157,7 +162,7 @@
  ww1_artillery_support_desc:0 "Unfortunately, we failed to understand the value of some great technological advancements like armored cars or tanks on time. Being outnumbered in the new technology by enemy, we can make up for that by focusing on supplying our infantry with more submachine guns, steel helmets, grenades and artillery support. The better material will win the war, and our industry will provide it."
  ww1_combined_arms:0 "Combined Arms"
  ww1_combined_arms_desc:0 "Tanks, gas and aviation have changed the face of modern war forever. With the new technologies and techniques developed to secure an edge over the enemy it had became clear, that attrition warfare is no longer a viable strategy to win this war. Instead, we will throw all arms at the enemy to secure the victory in a single offensive along the entire frontline."
- # AIR DOCTRINES
+ #AIR DOCTRINES
  TITLE_WW1_AIRDOCTRINE:0 "Great War Era Doctrine"
  WW1_AIRDOCTRINE_DESC:0 "The emergence of heavier-than-air flight presaged the change in the character of warfare."
  ww1_airdoctrine:0 "Observation Balloons"
@@ -186,8 +191,7 @@
  ww1_independent_air_force_desc:0 "Reliance on other air forces must stop to be effective in guiding our path."
  ww1_twilight_of_the_airship:0 "Twilight of the Airship"
  ww1_twilight_of_the_airship_desc:0 "The pinnacle of Airship combat is at hand time to make full use of it while it lasts."
-
- 
+ #MISC 
  motorised_infantry2:0 "Motorised Infantry"
  motorised_infantry2_desc:0 "By extending the use of motor vehicles in infantry transports in the field, the mobility of otherwise slow-moving infantry units can be greatly improved, enabling faster responses and new strategies."
  russian_research_name:0 "Russian Military Cooperation"
